<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <include layout="@layout/zen_setting_title"/>
    <RadioGroup
            android:id="@+id/search_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RadioButton
                android:id="@+id/search_radioButton_nano"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_engines_item_height"
                android:text="@string/search_engine_nano"
                android:button="@null"
                android:checked="false"
                android:paddingRight="30dp"
                android:paddingLeft="17dp"
                android:drawablePadding="12dp"
                android:drawableLeft="@drawable/search_engine_nano"
                android:drawableRight="@drawable/search_radio_button_selector"/>
        <RadioButton
                android:id="@+id/search_radioButton_google"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_engines_item_height"
                android:text="@string/search_engine_google"
                android:button="@null"
                android:checked="false"
                android:paddingRight="30dp"
                android:paddingLeft="17dp"
                android:drawablePadding="12dp"
                android:drawableLeft="@drawable/search_engine_google"
                android:drawableRight="@drawable/search_radio_button_selector"/>
        <RadioButton
                android:id="@+id/search_radioButton_yahoo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_engines_item_height"
                android:text="@string/search_engine_yahoo"
                android:button="@null"
                android:checked="false"
                android:paddingRight="30dp"
                android:paddingLeft="17dp"
                android:drawablePadding="12dp"
                android:drawableLeft="@drawable/search_engine_yahoo"
                android:drawableRight="@drawable/search_radio_button_selector"/>
        <RadioButton
                android:id="@+id/search_radioButton_bing"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_engines_item_height"
                android:text="@string/search_engine_bing"
                android:button="@null"
                android:checked="false"
                android:paddingRight="30dp"
                android:paddingLeft="17dp"
                android:drawablePadding="12dp"
                android:drawableLeft="@drawable/search_engine_bing"
                android:drawableRight="@drawable/search_radio_button_selector"/>
        <RadioButton
                android:id="@+id/search_radioButton_baidu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_engines_item_height"
                android:text="@string/search_engine_baidu"
                android:button="@null"
                android:checked="false"
                android:paddingRight="30dp"
                android:paddingLeft="17dp"
                android:drawablePadding="12dp"
                android:drawableLeft="@drawable/search_engine_baidu"
                android:drawableRight="@drawable/search_radio_button_selector"/>
        <RadioButton
                android:id="@+id/search_radioButton_duckduckgo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_engines_item_height"
                android:text="@string/search_engine_duckduckgo"
                android:button="@null"
                android:checked="false"
                android:paddingRight="30dp"
                android:paddingLeft="17dp"
                android:drawablePadding="12dp"
                android:drawableLeft="@drawable/search_engine_duckduckgo"
                android:drawableRight="@drawable/search_radio_button_selector"/>
    </RadioGroup>
</LinearLayout>
