<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@android:style/Theme.Light.NoTitleBar.Fullscreen"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="@dimen/alert_dialog_layout_width"
            android:layout_height="wrap_content"
            android:background="@drawable/up_bg"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/zen_logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/zen_logo"
                    android:visibility="gone"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/altert_launcher_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/usage_notice"
                        android:textColor="#eeeeee"
                        android:textSize="26dp"
                        android:layout_marginLeft="30dp"/>

                <TextView
                        android:id="@+id/alter_plugin_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/alter_plugin_name"
                        android:textColor="#888888"
                        android:textSize="12dp"
                        android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
                android:id="@+id/alter_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="17dp"
                android:layout_marginTop="10dp"
                android:text="@string/usage_alter_content_nano"
                android:textColor="#eeeeee"
                android:textSize="14dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="@dimen/alert_dialog_layout_width"
            android:layout_height="50dp"
            android:background="@drawable/down_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_download"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/usage_alter_ok"
                android:textColor="@drawable/text_selector"
                android:textSize="18dp"/>

        <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="left|center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/alter_cancel"
                android:textColor="@drawable/text_selector"
                android:textSize="18dp"
                android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>
